syntax = "proto3";

package product;

option go_package = "github.com/toji-dev/go-shop/proto/product";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}

enum ProductStatus {
  DRAFT = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  OUT_OF_STOCK = 3;
  DISCONTINUED = 4;
  REJECTED = 5;
  BANNED = 6;
}

message CreateProductRequest {
  string shop_id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4; 
  double price = 5;
  int32 quantity = 6;
  string thumbnail_url = 7;
}

message CreateProductResponse {
  string id = 1;
  string shop_id = 2;
  string name = 3;
  string description = 4;
  string category_id = 5;
  double price = 6;
  int32 quantity = 7;
  ProductStatus status = 8;
  string created_at = 9; 
}